major refactoring initiative; the first of many commits

--- a/index.html
+++ b/index.html
@@ -2,90 +2,88 @@
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>	  <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>	  <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-	<meta charset="utf-8">
-	<title>Kyle Moses | Front-End Web Developer & Designer</title>
-	
-	<meta name="author" content="Kyle Moses">
-	<meta name="description" content="Kyle Moses is a front end web developer and digital web designer based in Columbus Ohio, 43016">
-	<meta name="keywords" content="HTML, HTML5, XHTML, CSS, CSS2, CSS3, Front-End, Web, Developer, Digital, Designer, Columbus, JavaScript, JS, jQuery, PHP">
-	<meta name="robots" content="index, follow">
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+    <!--<![endif]-->
 
-	<link rel="stylesheet" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Caudex:400italic,700italic' rel='stylesheet' type='text/css'>
-	<link rel="shortcut icon" href="favicon.ico" />
-	
-	<script src="js/libs/modernizr-2.5.3.min.js"></script>
-</head>
-<body>
-  <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-	<header>
-		<div class="my_name">&lt;!kyle moses&gt;</div>
-		<div class="logo_wrap">
-			<a href="javascript:void(0);">
-				<img src="img/mosesstudios_logo.png" alt="moses studios" title="moses studios" />
-			</a>
-		</div>
-	</header>
-	<div class="main" role="main">
-		<div class="black">
-			<div class="elevator_speach">
-				<p>"I can't remember a time without my own computer. You could say I was a bit of a nerd 
-				growing up. I spent my childhood taking things apart just to put them back together again. 
-				Building has always been a part of my inquisitive nature, and now I enjoy it for a living as a 
-				web designer and front-end developer. The intricacy of writing code has 
-				always fascinated me. My natural love for trouble-shooting and well trained eye for design 
-				allow me to offer a more versatile skill set. This combination aligned with my passion for what I 
-				do puts me a cut above the rest."
-				</p>
-			</div>
-		</div>
-		
-		<div class="wrap">
-			<div class="portfolio_wrap">
-				<a class="portfolio" href=""></a>
-			</div>
-			<div class="resume_wrap"> 
-				<a class="resume" href="kylemoses_resume.pdf" target="_blank"></a> 
-			</div>
-			<div class="contact_wrap"> 
-				<a class="contact" data-reveal-id="contact_modal" href="#"></a> 
-			</div>
-		</div>
-		
-		<div id="contact_modal" class="reveal-modal">
-				<h2>Get in Touch!</h2>
-				<p class="lead">
-				614.940.1780<br />
-				moses.kyle@gmail.com
-				</p>
-				<form id="contact_form" method="POST" action="contact_form.php">
-					<input id="name" type="text" name="name" value="Name" />
-					<input id="email" type="text" name="email" value="Email" />
-					<input id="phone" type="text" name="phone" value="Phone" />
-					<input id="organization" type="text" name="organization" value="Organization" />
-					<textarea id="message" class="message" name="message">Message</textarea>
-					<input type="submit" name="contactFormSubmitted" value="Send" />
-				</form>
-				<div id="formResponse" style="display: none;"></div>
-				<a class="close-reveal-modal">&#215;</a>
-		</div>	
-	</div>
-	<footer>
-		<p>&copy; Copyright 2012 Kyle Moses. All Rights Reserved.</p>
-	</footer>
+    <head>
+        <meta charset="utf-8">
+        <title>Kyle Moses | Front-End Web Developer & Designer</title>
 
+        <meta name="author" content="Kyle Moses">
+        <meta name="description" content="Kyle Moses is a front end web developer and digital web designer based in Columbus Ohio, 43125">
+        <meta name="keywords" content="HTML5, CSS3, Front-End, Web, Developer, Columbus, JavaScript, JS, jQuery, AngularJs, PHP">
+        <meta name="robots" content="index, follow">
 
-	<script src="js/libs/jquery-1.7.1.min.js"></script>
-	
-	<script src="js/libs/jquery.reveal.js"></script>
-	<script src="js/libs/jquery.fancybox.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<script src="js/plugins.js"></script>
-	<script src="js/script.js"></script>
-	
-</body>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" href="favicon.ico" />
+
+        <script src="js/libs/modernizr-2.5.3.min.js"></script>
+    </head>
+
+    <body>
+        <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+        <header>
+            <div class="container">
+                <a href="/" class="logo">
+                    <img class="logo-img" src="img/svg/kylemoses_logo.svg" alt="Kyle Moses Logo" title="Kyle Moses Logo" />
+                    <h1 class="logo-text">Kyle Moses // Front End Web Developer</h1>
+                </a>
+            </div>
+        </header>
+        <div class="elevator_speach">
+            <div class="container">
+                <p>"I can't remember a time without my own computer. You could say I was a bit of a nerd growing up. I spent my childhood taking things apart just to put them back together again. Building has always been a part of my inquisitive nature,
+                    and now I enjoy it for a living as a web designer and front-end developer. The intricacy of writing code has always fascinated me. My natural love for trouble-shooting and well trained eye for design allow me to offer a more versatile
+                    skill set. This combination aligned with my passion for what I do puts me a cut above the rest."
+                </p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="portfolio_wrap">
+                <a class="portfolio" href=""></a>
+            </div>
+            <div class="resume_wrap">
+                <a class="resume" href="kylemoses_resume.pdf" target="_blank"></a>
+            </div>
+            <div class="contact_wrap">
+                <a class="contact" data-reveal-id="contact_modal" href="#"></a>
+            </div>
+        </div>
+        <footer>
+			<div class="container">
+				<p>&copy; Copyright 2012 Kyle Moses. All Rights Reserved.</p>
+			</div>
+        </footer>
+
+        <div id="contact_modal" class="reveal-modal">
+            <h2>Get in Touch!</h2>
+            <p class="lead">
+                614.940.1780
+                <br /> moses.kyle@gmail.com
+            </p>
+            <form id="contact_form" method="POST" action="contact_form.php">
+                <input id="name" type="text" name="name" value="Name" />
+                <input id="email" type="text" name="email" value="Email" />
+                <input id="phone" type="text" name="phone" value="Phone" />
+                <input id="organization" type="text" name="organization" value="Organization" />
+                <textarea id="message" class="message" name="message">Message</textarea>
+                <input type="submit" name="contactFormSubmitted" value="Send" />
+            </form>
+            <div id="formResponse" style="display: none;"></div>
+            <a class="close-reveal-modal">&#215;</a>
+        </div>
+
+        <script src="js/libs/jquery-1.7.1.min.js"></script>
+
+        <script src="js/libs/jquery.reveal.js"></script>
+        <script src="js/libs/jquery.fancybox.js"></script>
+
+        <script src="js/plugins.js"></script>
+        <script src="js/script.js"></script>
+
+    </body>
+
 </html>
